--- a/src/styles/search-box.css
+++ b/src/styles/search-box.css
@@ -11,16 +11,16 @@
   width: 100%;
   padding: 0.5em;
   border-radius: 5px;
-  border: 1px solid #bbb;
+  border: 1px solid var(--border-color);
   outline: none;
-  background-color: white;
-  color: black;
-  box-shadow: 0 2px 6px 0 #cccc;
+  background-color: var(--search-box-bg);
+  color: var(--search-box-fg);
+  box-shadow: 0 2px 6px 0 var(--shadow-color);
 }
 
 .search-box input:focus-visible {
   border-color: #6ae;
-  box-shadow: 0 0 0 1px #6ae, 0 2px 6px 0 cccc;
+  box-shadow: 0 0 0 1px #6ae, 0 2px 6px 0 var(--shadow-color);
 }
 
 .search-box .actions {
@@ -66,11 +66,11 @@
 
 .search-box .actions button[type="button"] {
   background-color: transparent;
-  color: #333;
+  color: var(--search-box-fg);
 }
 
 .search-box .actions button[type="button"]:enabled:hover {
-  background-color: #eee;
+  background-color: #9992;
 }
 
 .search-box .actions button[type="submit"]:enabled:hover {
@@ -78,25 +78,5 @@
 }
 
 .search-box .actions button:enabled:active {
-  box-shadow: inset 0 0 5px 0 #3339;
-}
-
-@media (prefers-color-scheme: dark) {
-  .search-box input {
-    background-color: black;
-    color: white;
-  }
-
-  .search-box .actions button[type="button"] {
-    background-color: transparent;
-    color: #ccc;
-  }
-
-  .search-box .actions button[type="button"]:enabled:hover {
-    background-color: #222;
-  }
-
-  .search-box .actions button:enabled:active {
-    box-shadow: inset 0 0 5px 0 #000a;
-  }
+  box-shadow: inset 0 0 5px 0 var(--shadow-color);
 }
