--- a/src/styles/whichbeatle.css
+++ b/src/styles/whichbeatle.css
@@ -1,18 +1,18 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
     sans-serif;
-  background: #f0f0f0;
+  background-color: var(--page-bg);
 }
 
 header {
-  background: #fff;
+  background: var(--header-bg);
   display: flex;
   justify-content: center;
   padding: 0 20px;
   width: 100%;
   box-sizing: border-box;
-  box-shadow: 0 2px 6px 0 #cccc;
-  border-bottom: 1px solid #ccc;
+  box-shadow: 0 2px 6px 0 var(--shadow-color);
+  border-bottom: 1px solid var(--border-color);
 }
 
 #logo {
@@ -49,20 +49,6 @@ main {
   overflow: hidden;
 }
 
-@media (prefers-color-scheme: dark) {
-  body {
-    background: #222;
-  }
-
-  header {
-    background-color: #111;
-  }
-
-  #logo {
-    filter: invert(0.93);
-  }
-}
-
 #results {
   display: grid;
   grid-template-columns: 1fr;
@@ -73,10 +59,4 @@ main {
   #results {
     grid-template-columns: 1fr 1fr;
   }
-}
-
-/* If the user has searched and there are no results, show an empty message */
-form[data-last-search] + #results:empty::before {
-  content: "No results";
-  text-align: center;
 }
